# coreos

./: .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  PROJECT_STATUS.md  README.md  SECURITY.md
.github/: pull_request_template.md
archive/: README.md  architector.md  core.md  gazprom.md  gorynych.md  investor.md  marketolog.md
layers/: layer-1-user-experience.md  layer-10-business-model.md  layer-2-ai.md  layer-2-system-split.md  layer-3-installation-scenarios.md  layer-3-system-split.md  layer-4-devices.md  layer-4-installation-scenarios.md  layer-5-apps.md  layer-5-devices.md  layer-6-security.md  layer-7-security.md  layer-7-technical-decomposition.md  layer-8-technical-decomposition.md  layer-9-business-model.md  layer-apps.md  layer-devices.md  layer-installation-scenarios.md  layer-network.md  layer-security-architecture.md  layer-security.md  layer-storage.md  layer-system-split.md  layer-technical-decomposition.md  layer-threat-model.md  layer-user-experience.md  layers-review.md
log/: README.md  phase-00-playable-demo.md
mvp/: README.md  repo-structure.md  tech-decisions.md  track1-runtime.md  track2-shell.md
plan/: README.md  phase-00-playable-demo.md  phase-01-foundation.md  phase-02-commandbar.md  phase-03-projects-windows.md  phase-04-applications.md  phase-05-sync-p2p.md  phase-06-communication.md  phase-07-voice.md  phase-08-security-admin.md  roadmap.md  (+2 more)
src/display_server/: Cargo.toml
src/display_server/src/: lib.rs  renderer.rs  surface.rs
src/display_server/tests/: wgpu_integration.rs
src/island_mode/: Cargo.toml
src/island_mode/src/: lib.rs  webview.rs
src/micro_kernel/: Cargo.toml
src/micro_kernel/src/: ipc.rs  lib.rs  security.rs  sqlite.rs
src/micro_kernel/tests/: thread_ipc.rs
src/tests/: Cargo.toml
src/tests/tests/: integration_tests.rs
(+57 files in other folders)
