[package]
name = "workspace-island-mode"
description = "WebView embedding and legacy app isolation"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }

[lib]
name = "workspace_island_mode"
path = "src/lib.rs"
