[package]
name = "integration_tests"
description = "Cross-crate integration test suite for CORE OS"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
workspace-host-shim = { path = "../host_shim" }
workspace-display-server = { path = "../display_server" }
workspace-micro-kernel = { path = "../micro_kernel" }
workspace-island-mode = { path = "../island_mode" }
serde_json = "1"
